Added code running feature.

--- a/src/style.less
+++ b/src/style.less
@@ -137,7 +137,7 @@ body {
   /*background-color: rgba(255, 255, 255, 0.7);*/
 }
 
-#processing2 {
+#loading-window {
   position: absolute;
   z-index: 500;
   top: 0;
@@ -258,7 +258,7 @@ a {
 
 @font-face {
   font-family: 'icons';
-  src: url('fonts/icons.ttf?ywd0ns') format('truetype'), url('fonts/icons.woff?ywd0ns') format('woff'), url('fonts/icons.svg?ywd0ns#icons') format('svg');
+  src: url('assets/fonts/icons.ttf?ywd0ns') format('truetype'), url('assets/fonts/icons.woff?ywd0ns') format('woff'), url('assets/fonts/icons.svg?ywd0ns#icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -337,7 +337,7 @@ a {
   left: 7px;
 }
 
-.spinner2 {
+.spinner-window {
   width: 30px;
   height: 30px;
   position: absolute;
@@ -347,7 +347,7 @@ a {
   margin-top: -15px;
 }
 
-.spinner2 .double-bounce1, .spinner2 .double-bounce2 {
+.spinner-window .double-bounce1, .spinner-window .double-bounce2 {
   background-color: #e4e2e2;
 }
 
