--- a/src/style.less
+++ b/src/style.less
@@ -4,17 +4,18 @@ html {
   font-family: sans-serif;
 }
 
-html, body {
+body,
+html {
   height: 100%;
 }
 
 body {
-  padding: 20px 20px;
+  padding: 20px;
 }
 
 #playground {
   height: 100%;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 #playground .editor-container {
@@ -26,7 +27,7 @@ body {
 }
 
 #console {
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 #console-heading {
@@ -62,7 +63,8 @@ body {
   padding-top: 20px;
 }
 
-.console [class^="icon-"], .console [class*=" icon-"] {
+.console [class*=" icon-"],
+.console [class^="icon-"] {
   display: inline-block;
   margin-right: 10px;
   vertical-align: middle;
@@ -104,10 +106,22 @@ body {
 }
 
 #options {
-  color: #333;
+  position: absolute;
+  display: none;
+  margin-left: -18px;
+  top: 25px;
+  padding: 10px 20px;
+  z-index: 1000;
   background-color: rgba(255, 255, 255, 1);
-  text-align: left;
-  padding-left: 20px;
+  border: #c3c3c3 1px solid;
+
+  .option {
+    padding: 5px 0;
+  }
+
+  &.visible {
+    display: inline-block;
+  }
 }
 
 #run-code {
@@ -153,13 +167,21 @@ body {
 }
 
 #header {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 #title {
   text-align: left;
   font-size: 15px;
+
+  .icon-cog {
+    cursor: pointer;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 5px;
+    padding-bottom: 3px;
+  }
 }
 
 #github {
@@ -179,21 +201,23 @@ a {
   text-decoration: none;
 }
 
-*, *:after, *:before {
+*,
+*:after,
+*:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 .grid {
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 .grid-pad {
-  padding: 20px 0px 20px 20px;
+  padding: 20px 0 20px 20px;
 }
 
-.grid-pad>[class*='col-']:last-of-type {
+.grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
 }
 
@@ -255,7 +279,6 @@ a {
   background-color: #fff;
   animation: loader-inner 2s infinite ease-in;
 }
-
 @font-face {
   font-family: 'icons';
   src: url('assets/fonts/icons.ttf?ywd0ns') format('truetype'), url('assets/fonts/icons.woff?ywd0ns') format('woff'), url('assets/fonts/icons.svg?ywd0ns#icons') format('svg');
@@ -263,7 +286,8 @@ a {
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class*=" icon-"],
+[class^="icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icons' !important;
   speak: none;
@@ -293,39 +317,49 @@ a {
   content: "\e903";
 }
 
+.icon-cog:before {
+  content: "\e904";
+}
 @keyframes loader {
   0% {
     transform: rotate(0deg);
   }
+
   25% {
     transform: rotate(180deg);
   }
+
   50% {
     transform: rotate(180deg);
   }
+
   75% {
     transform: rotate(360deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
-
 @keyframes loader-inner {
   0% {
-    height: 0%;
+    height: 0;
   }
+
   25% {
-    height: 0%;
+    height: 0;
   }
+
   50% {
     height: 100%;
   }
+
   75% {
     height: 100%;
   }
+
   100% {
-    height: 0%;
+    height: 0;
   }
 }
 
@@ -347,11 +381,13 @@ a {
   margin-top: -15px;
 }
 
-.spinner-window .double-bounce1, .spinner-window .double-bounce2 {
+.spinner-window .double-bounce1,
+.spinner-window .double-bounce2 {
   background-color: #e4e2e2;
 }
 
-.double-bounce1, .double-bounce2 {
+.double-bounce1,
+.double-bounce2 {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -368,21 +404,23 @@ a {
   -webkit-animation-delay: -1.0s;
   animation-delay: -1.0s;
 }
-
 @-webkit-keyframes sk-bounce {
-  0%, 100% {
-    -webkit-transform: scale(0.0)
+  0%,
+  100% {
+    -webkit-transform: scale(0.0);
   }
+
   50% {
-    -webkit-transform: scale(1.0)
+    -webkit-transform: scale(1.0);
   }
 }
-
 @keyframes sk-bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
   }
+
   50% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
