--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -66,6 +66,14 @@ a {
     background-color: rgba(255, 255, 255, 1);
     border: #c3c3c3 1px solid;
 
+    h6 {
+      padding: 0;
+      border-bottom: 1px solid;
+      padding-bottom: 2px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
     .option {
       padding: 5px 0;
     }
