Display TypeScript version in the playground settings.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -78,8 +78,12 @@ a {
       margin-bottom: 10px;
     }
 
-    .option {
+    .option, .info {
       padding: 5px 0;
+    }
+
+    .info {
+      font-size: 13px;
     }
 
     &.visible {
