--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -89,6 +89,11 @@ a {
     &.visible {
       display: inline-block;
     }
+
+    input[type="text"] {
+      width: 100%;
+      outline: none;
+    }
   }
 
   #github {
