--- a/src/styles/grid.less
+++ b/src/styles/grid.less
@@ -1,13 +1,13 @@
 .grid {
   margin: 0;
 
-  [class*='col-'] {
+  [class*="col-"] {
     position: relative;
     float: left;
     padding-right: 20px;
   }
 
-  [class*='col-']:last-of-type {
+  [class*="col-"]:last-of-type {
     padding-right: 0;
   }
 
@@ -46,6 +46,6 @@
   padding: 20px 0 20px 20px;
 }
 
-.grid-pad > [class*='col-']:last-of-type {
+.grid-pad > [class*="col-"]:last-of-type {
   padding-right: 20px;
 }
