--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -1,13 +1,15 @@
 @font-face {
-  font-family: 'icons';
-  src: url('assets/fonts/icons.ttf?ywd0ns') format('truetype'), url('assets/fonts/icons.woff?ywd0ns') format('woff'), url('assets/fonts/icons.svg?ywd0ns#icons') format('svg');
+  font-family: "icons";
+  src: url("assets/fonts/icons.ttf?ywd0ns") format("truetype"),
+    url("assets/fonts/icons.woff?ywd0ns") format("woff"),
+    url("assets/fonts/icons.svg?ywd0ns#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 [class*=" icon-"],
 [class^="icon-"] {
-  font-family: 'icons' !important;
+  font-family: "icons" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
