--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -78,7 +78,8 @@ a {
       margin-bottom: 10px;
     }
 
-    .option, .info {
+    .option,
+    .info {
       padding: 5px 0;
     }
 
@@ -204,7 +205,8 @@ a {
     overflow-y: scroll;
     overflow-x: auto;
     white-space: pre;
-    font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', Courier, monospace;
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
+      Courier, monospace;
     line-height: 1.7;
     font-size: 13px;
     padding-left: 40px;
