--- a/src/styles/loaders.less
+++ b/src/styles/loaders.less
@@ -5,7 +5,7 @@
   display: inline-block;
   width: 30px;
   height: 30px;
-  border: 4px solid #Fff;
+  border: 4px solid #fff;
   animation: loader 2s infinite ease;
 
   .loader-inner {
@@ -78,34 +78,34 @@
     position: absolute;
     top: 0;
     left: 0;
-    -webkit-animation: spinner 2.0s infinite ease-in-out;
-    animation: spinner 2.0s infinite ease-in-out;
+    -webkit-animation: spinner 2s infinite ease-in-out;
+    animation: spinner 2s infinite ease-in-out;
   }
 
   .double-bounce2 {
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
   }
 }
 @-webkit-keyframes spinner {
   0%,
   100% {
-    -webkit-transform: scale(0.0);
+    -webkit-transform: scale(0);
   }
 
   50% {
-    -webkit-transform: scale(1.0);
+    -webkit-transform: scale(1);
   }
 }
 @keyframes spinner {
   0%,
   100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
+    transform: scale(0);
+    -webkit-transform: scale(0);
   }
 
   50% {
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+    transform: scale(1);
+    -webkit-transform: scale(1);
   }
 }
