--- a/src/styles/run.less
+++ b/src/styles/run.less
@@ -26,7 +26,7 @@
   #console {
     height: 100%;
 
-    [class*=col-]:last-of-type {
+    [class*="col-"]:last-of-type {
       height: 85%;
     }
 
