Improve options box layout

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -69,6 +69,8 @@ a {
     z-index: 1000;
     background-color: rgba(255, 255, 255, 1);
     border: #c3c3c3 1px solid;
+    max-height: 500px;
+    overflow-x: scroll;
 
     h6 {
       padding: 0;
@@ -140,7 +142,6 @@ a {
     cursor: pointer;
     background-color: rgba(241, 241, 241, 1);
     color: #333;
-    margin-bottom: 10px;
   }
 
   #processing {
